[gd_scene load_steps=35 format=3 uid="uid://kcl3hrttj06k"]

[ext_resource type="Script" path="res://Scripts/Characters/knight.gd" id="1_2x1n4"]
[ext_resource type="PackedScene" uid="uid://dfc0wb6eis4ga" path="res://Prefabs/Visuals/attack1_debuff.tscn" id="2_u3had"]
[ext_resource type="PackedScene" uid="uid://bu2o4ja3mcb8n" path="res://Prefabs/Visuals/attack2_debuff.tscn" id="3_jtsri"]
[ext_resource type="PackedScene" uid="uid://ctj4ly41elsh8" path="res://3DModels/knight.fbx" id="4_3ath4"]
[ext_resource type="AudioStream" uid="uid://o40f4vqkcpja" path="res://Sound/Attack/hit-swing-sword-small-2-95566.mp3" id="5_24fca"]
[ext_resource type="Texture2D" uid="uid://748mw4l6ac40" path="res://Textures/3DModels/knight.png" id="5_ftw8n"]
[ext_resource type="Script" path="res://Scripts/detectTargetType.gd" id="6_64djv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gn7p2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhf33"]
shading_mode = 0
albedo_texture = ExtResource("5_ftw8n")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yvoud"]
animation = &"metarig_001|attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_geiiv"]
animation = &"metarig_001|attack_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fq5vk"]
animation = &"metarig_001|attack_idle_to_death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_doip3"]
animation = &"metarig_001|attack_idle_to_death_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n3r3u"]
animation = &"metarig_001|attack_idle_to_move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1kpxb"]
animation = &"metarig_001|idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r6f85"]
animation = &"metarig_001|idle_to_move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5kfy"]
animation = &"metarig_001|move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wwr5r"]
animation = &"metarig_001|move_attack_to_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8n1bg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ka3e"]
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aypbj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bxwv7"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b8au5"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rp3y7"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s0aup"]
reset = false
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_frplg"]
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_quuql"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oewco"]
reset = false
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hyd71"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u2aem"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mbc8r"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6jd64"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dgtls"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bo0ww"]
states/End/position = Vector2(1124, 177)
states/Start/position = Vector2(143, 127)
states/metarig_001|attack/node = SubResource("AnimationNodeAnimation_yvoud")
states/metarig_001|attack/position = Vector2(534, 31)
states/metarig_001|attack_idle/node = SubResource("AnimationNodeAnimation_geiiv")
states/metarig_001|attack_idle/position = Vector2(534, 127)
states/metarig_001|attack_idle_to_death/node = SubResource("AnimationNodeAnimation_fq5vk")
states/metarig_001|attack_idle_to_death/position = Vector2(518, 508)
states/metarig_001|attack_idle_to_death_2/node = SubResource("AnimationNodeAnimation_doip3")
states/metarig_001|attack_idle_to_death_2/position = Vector2(886, 31)
states/metarig_001|attack_idle_to_move/node = SubResource("AnimationNodeAnimation_n3r3u")
states/metarig_001|attack_idle_to_move/position = Vector2(534, 215)
states/metarig_001|idle/node = SubResource("AnimationNodeAnimation_1kpxb")
states/metarig_001|idle/position = Vector2(143, 299)
states/metarig_001|idle_to_move/node = SubResource("AnimationNodeAnimation_r6f85")
states/metarig_001|idle_to_move/position = Vector2(518, 378)
states/metarig_001|move/node = SubResource("AnimationNodeAnimation_x5kfy")
states/metarig_001|move/position = Vector2(886, 299)
states/metarig_001|move_attack_to_attack/node = SubResource("AnimationNodeAnimation_wwr5r")
states/metarig_001|move_attack_to_attack/position = Vector2(886, 127)
transitions = ["Start", "metarig_001|idle", SubResource("AnimationNodeStateMachineTransition_8n1bg"), "metarig_001|idle", "metarig_001|idle_to_move", SubResource("AnimationNodeStateMachineTransition_5ka3e"), "metarig_001|idle_to_move", "metarig_001|move", SubResource("AnimationNodeStateMachineTransition_aypbj"), "metarig_001|move", "metarig_001|idle", SubResource("AnimationNodeStateMachineTransition_bxwv7"), "metarig_001|attack_idle", "metarig_001|attack", SubResource("AnimationNodeStateMachineTransition_b8au5"), "metarig_001|move", "metarig_001|move_attack_to_attack", SubResource("AnimationNodeStateMachineTransition_rp3y7"), "metarig_001|move_attack_to_attack", "metarig_001|attack_idle", SubResource("AnimationNodeStateMachineTransition_s0aup"), "metarig_001|attack_idle", "metarig_001|attack_idle_to_move", SubResource("AnimationNodeStateMachineTransition_frplg"), "metarig_001|attack_idle_to_move", "metarig_001|move", SubResource("AnimationNodeStateMachineTransition_quuql"), "metarig_001|attack_idle", "metarig_001|attack_idle_to_death_2", SubResource("AnimationNodeStateMachineTransition_oewco"), "metarig_001|idle", "metarig_001|attack_idle_to_death", SubResource("AnimationNodeStateMachineTransition_hyd71"), "metarig_001|attack", "metarig_001|attack_idle_to_death_2", SubResource("AnimationNodeStateMachineTransition_u2aem"), "metarig_001|move", "metarig_001|attack_idle_to_death", SubResource("AnimationNodeStateMachineTransition_mbc8r"), "metarig_001|attack", "metarig_001|attack_idle", SubResource("AnimationNodeStateMachineTransition_6jd64"), "metarig_001|idle", "metarig_001|attack", SubResource("AnimationNodeStateMachineTransition_dgtls")]
graph_offset = Vector2(-45, 38)

[node name="Knight" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_2x1n4")
attack_range = 2.0
attack1_debuff_prefab = ExtResource("2_u3had")
attack2_debuff_prefab = ExtResource("3_jtsri")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gn7p2")

[node name="knight" parent="." instance=ExtResource("4_3ath4")]
transform = Transform3D(0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, 0, 0)

[node name="Skeleton3D" parent="knight/RootNode/metarig_001" index="0"]
bones/1/position = Vector3(0.00726229, 1.18255e-06, 0.0103862)
bones/3/position = Vector3(-0.00370108, 1.18256e-06, -0.0116038)
bones/5/position = Vector3(4.29989e-18, 0.0367252, -0.0021988)
bones/5/rotation = Quaternion(0, -0.345795, 0, 0.93831)
bones/6/position = Vector3(0.000867082, 0.0132224, 0.000503542)
bones/6/rotation = Quaternion(-0.74683, -0.0241976, 0.0228693, 0.664181)
bones/7/position = Vector3(0.000118774, 0.000177611, 0.00127971)
bones/7/rotation = Quaternion(0.830006, 0.124654, -0.121915, 0.5298)
bones/9/position = Vector3(0.00207767, 0.0178027, 0.00145714)
bones/9/rotation = Quaternion(-0.477648, 0.306263, 0.195023, 0.800013)
bones/10/position = Vector3(-3.62134e-05, -0.000232024, -0.00142739)
bones/12/rotation = Quaternion(-0.0200153, 2.27426e-13, -4.77203e-09, 0.9998)
bones/13/rotation = Quaternion(0.965775, 0.147788, -0.110603, 0.182221)
bones/14/rotation = Quaternion(0.289458, 0.00180452, -9.91553e-05, 0.957189)
bones/16/rotation = Quaternion(-0.0304255, 0.000307357, -0.0799539, 0.996334)
bones/17/position = Vector3(0.00753042, 0.00568411, 0.000699099)
bones/17/rotation = Quaternion(0.866407, -0.151377, 0.416294, -0.230484)
bones/18/rotation = Quaternion(0.0493165, 0.0814797, -0.331454, 0.938652)
bones/19/rotation = Quaternion(-0.0882507, 0.331053, 0.0190387, 0.939284)
bones/21/position = Vector3(-0.00753042, 0.00568412, 0.000699096)
bones/21/rotation = Quaternion(0.651172, -0.249801, -0.710602, 0.0928403)
bones/22/rotation = Quaternion(0.135085, -0.0343203, 0.907894, 0.395352)
bones/23/rotation = Quaternion(0.0339167, 0.0709971, 0.336887, 0.938252)
bones/24/rotation = Quaternion(0.199322, -0.230327, 0.610918, 0.730752)
bones/26/rotation = Quaternion(0.993025, -0.0516308, -0.0861998, 0.0616817)
bones/27/rotation = Quaternion(0.337344, -0.00177464, 0.000115568, 0.94138)
bones/29/position = Vector3(-0.0103684, 0.00075911, -0.0284276)
bones/31/position = Vector3(0.00885092, -0.00942694, -0.00209191)
bones/31/rotation = Quaternion(0.604191, 0.0300932, 0.796254, 0.00526042)
bones/33/position = Vector3(-0.017415, -0.0100172, 0.00414918)
bones/35/position = Vector3(-0.00570648, 0.0172411, 0.00991895)
bones/35/rotation = Quaternion(-0.304791, -0.689345, 0.0335304, 0.65634)
bones/37/position = Vector3(-0.0137382, 0.0219567, 0.0447047)
bones/39/position = Vector3(-0.0195834, 0.024392, 0.0203621)

[node name="Cube_011" parent="knight/RootNode/metarig_001/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_lhf33")

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DotTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_24fca")
volume_db = -18.0

[node name="Thread1Node" type="Node" parent="." node_paths=PackedStringArray("parentNode")]
process_thread_group = 2
process_thread_group_order = 1
process_thread_messages = 0
script = ExtResource("6_64djv")
aggro_range = 10.0
parentNode = NodePath("..")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bo0ww")
anim_player = NodePath("../knight/AnimationPlayer")
active = true
parameters/conditions/attack = false
parameters/conditions/death = false
parameters/conditions/idle = true
parameters/conditions/move = false

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="DotTimer" to="." method="_on_dot_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]

[editable path="knight"]
